--- a/Cornell Movie Script Database EDA.ipynb
+++ b/Cornell Movie Script Database EDA.ipynb
@@ -80,26 +80,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_lines_text_file = \"C:/Users/DRB4/OneDrive/Data/cornell_movie_dialogs_corpus/movie_lines.txt\""
+    "movie_lines_text_file = \"C:/Users/DRB4/OneDrive/Data/cornell_movie_dialogs_corpus/movie_lines.txt\"\n",
+    "movie_lines_convo_file = \"C:/Users/DRB4/OneDrive/Data/cornell_movie_dialogs_corpus/movie_conversations.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(movie_lines_text_file, 'r') as f_movie_lines:\n",
-    "    data = f_movie_lines.read()"
+    "    data_line = f_movie_lines.read()\n",
+    "    \n",
+    "with open(movie_lines_convo_file, 'r') as f_movie_convo:\n",
+    "    data_conv = f_movie_convo.read()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -119,24 +123,12 @@
       "L868 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ The \"real you\".\n",
       "L867 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ What good stuff?\n",
       "L866 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ I figured you'd get to the good stuff eventually.\n",
-      "L865 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ Thank God!  If I had to hear one more story about your coiffure...\n",
-      "L864 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Me.  This endless ...blonde babble. I'm like, boring myself.\n",
-      "L863 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ What crap?\n",
-      "L862 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ do you listen to this crap?\n",
-      "L861 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ No...\n",
-      "L860 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Then Guillermo says, \"If you go any lighter, you're gonna look like an extra on 90210.\"\n",
-      "L699 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ You always been this selfish?\n",
-      "L698 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ But\n",
-      "L697 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ Then that's all you had to say.\n",
-      "L696 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Well, no...\n",
-      "L695 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ You never wanted to go out with 'me, did you?\n",
-      "L694 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ I was?\n",
-      "L693 +++$+++ u2 \n"
+      "L865 +++$+++ u\n"
      ]
     }
    ],
    "source": [
-    "print(data[0:2000])"
+    "print(data_line[0:1000])"
    ]
   },
   {
@@ -484,16 +476,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "movie_line_df.columns = ['Line', 'SpeakerID', 'Movie', 'SpeakerName', 'Line']"
+    "movie_line_df.columns = ['Line', 'User', 'Movie', 'Name', 'Line']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -518,9 +510,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Line</th>\n",
-       "      <th>SpeakerID</th>\n",
+       "      <th>User</th>\n",
        "      <th>Movie</th>\n",
-       "      <th>SpeakerName</th>\n",
+       "      <th>Name</th>\n",
        "      <th>Line</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -610,17 +602,17 @@
        "</div>"
       ],
       "text/plain": [
-       "     Line SpeakerID Movie SpeakerName  \\\n",
-       "0  L1045        u0    m0      BIANCA    \n",
-       "1  L1044        u2    m0     CAMERON    \n",
-       "2   L985        u0    m0      BIANCA    \n",
-       "3   L984        u2    m0     CAMERON    \n",
-       "4   L925        u0    m0      BIANCA    \n",
-       "5   L924        u2    m0     CAMERON    \n",
-       "6   L872        u0    m0      BIANCA    \n",
-       "7   L871        u2    m0     CAMERON    \n",
-       "8   L870        u0    m0      BIANCA    \n",
-       "9   L869        u0    m0      BIANCA    \n",
+       "     Line  User Movie       Name  \\\n",
+       "0  L1045    u0    m0     BIANCA    \n",
+       "1  L1044    u2    m0    CAMERON    \n",
+       "2   L985    u0    m0     BIANCA    \n",
+       "3   L984    u2    m0    CAMERON    \n",
+       "4   L925    u0    m0     BIANCA    \n",
+       "5   L924    u2    m0    CAMERON    \n",
+       "6   L872    u0    m0     BIANCA    \n",
+       "7   L871    u2    m0    CAMERON    \n",
+       "8   L870    u0    m0     BIANCA    \n",
+       "9   L869    u0    m0     BIANCA    \n",
        "\n",
        "                                                Line  \n",
        "0                                       They do not!  \n",
@@ -635,7 +627,7 @@
        "9                   Like my fear of wearing pastels?  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +647,7 @@
        "617"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,6 +655,188 @@
    "source": [
     "# # o\n",
     "len(movie_line_df['Movie'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L194', 'L195', 'L196', 'L197']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L198', 'L199']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L200', 'L201', 'L202', 'L203']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L204', 'L205', 'L206']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L207', 'L208']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L271', 'L272', 'L273', 'L274', 'L275']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L276', 'L277']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L280', 'L281']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L363', 'L364']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L365', 'L366']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L367', 'L368']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L401', 'L402', 'L403']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L404', 'L405', 'L406', 'L407']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L575', 'L576']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L577', 'L578']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L662', 'L663']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L693', 'L694', 'L695']\n",
+      "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L696', 'L697', 'L69\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_conv[0:1000])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The conversations data helps chatbot know which lines work together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "D:\\Dev\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L194', 'L195', 'L196', 'L197']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L198', 'L199']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L200', 'L201', 'L202', 'L203']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L204', 'L205', 'L206']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L207', 'L208']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L271', 'L272', 'L273', 'L274', 'L275']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L276', 'L277']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L280', 'L281']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L363', 'L364']</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>u0</td>\n",
+       "      <td>u2</td>\n",
+       "      <td>m0</td>\n",
+       "      <td>['L365', 'L366']</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0     1     2                                          3\n",
+       "0  u0    u2    m0            ['L194', 'L195', 'L196', 'L197']\n",
+       "1  u0    u2    m0                            ['L198', 'L199']\n",
+       "2  u0    u2    m0            ['L200', 'L201', 'L202', 'L203']\n",
+       "3  u0    u2    m0                    ['L204', 'L205', 'L206']\n",
+       "4  u0    u2    m0                            ['L207', 'L208']\n",
+       "5  u0    u2    m0    ['L271', 'L272', 'L273', 'L274', 'L275']\n",
+       "6  u0    u2    m0                            ['L276', 'L277']\n",
+       "7  u0    u2    m0                            ['L280', 'L281']\n",
+       "8  u0    u2    m0                            ['L363', 'L364']\n",
+       "9  u0    u2    m0                            ['L365', 'L366']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_convo_df = pd.read_csv(movie_lines_convo_file, sep = None, header=None, delimiter = \"\\+\\+\\+\\$\\+\\+\\+\")\n",
+    "movie_convo_df.head(10)"
    ]
   },
   {
