--- a/Preproc.ipynb
+++ b/Preproc.ipynb
@@ -28,6 +28,214 @@
       "metadata": {
         "id": "HH6Sk9T9RjrN",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "fb6d059b-18dd-44ad-fc21-913e4cf3f1d4"
+      },
+      "cell_type": "code",
+      "source": [
+        "#!pip install -q xlrd\n",
+        "#!git clone https://github.com/hamil168/Chatbots\n",
+        "!cd Chatbots\n",
+        "!git pull https://github.com/hamil168/Chatbots master\n",
+        "\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "From https://github.com/hamil168/Chatbots\r\n",
+            " * branch            master     -> FETCH_HEAD\r\n",
+            "Already up-to-date.\r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "oWBAHK8kWX26",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f11220ec-31ed-4a72-accc-1af7eb420e3d"
+      },
+      "cell_type": "code",
+      "source": [
+        "ls"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\u001b[0m\u001b[01;34mChatbots\u001b[0m/  \u001b[01;34mdatalab\u001b[0m/\r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BvtIyuS7XHeX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "f74d27cb-7c98-4c24-dd93-e405bcd6ad50"
+      },
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "import re\n",
+        "import time"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "zy6to5EBXJcd",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
+        "id": "XIQMsrJkXCaK",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "7ed8571a-f23f-4ba1-bf04-14cbc0ec8222"
+      },
+      "cell_type": "code",
+      "source": [
+        "ls"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cornell Movie Script Database EDA.ipynb  movie_lines.txt\r\n",
+            "movie_conversations.txt                  Preproc.ipynb\r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Er-yessXX8gZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "a84d5f04-d35c-4afe-cfb8-55d8455748b1"
+      },
+      "cell_type": "code",
+      "source": [
+        "lines = open('movie_lines.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')\n",
+        "conversations = open('movie_conversations.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')"
+      ],
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "BSPIatWTZGly",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
+        "id": "SyVmsBPcYvzY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 207
+        },
+        "outputId": "4b99639a-07a2-4d55-f1f0-dcab19e4083e"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\".join(lines[0:10]))"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "L1045 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ They do not!\n",
+            "L1044 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ They do to!\n",
+            "L985 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ I hope so.\n",
+            "L984 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ She okay?\n",
+            "L925 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Let's go.\n",
+            "L924 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ Wow\n",
+            "L872 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Okay -- you're gonna need to learn how to lie.\n",
+            "L871 +++$+++ u2 +++$+++ m0 +++$+++ CAMERON +++$+++ No\n",
+            "L870 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ I'm kidding.  You know how sometimes you just become this \"persona\"?  And you don't know how to quit?\n",
+            "L869 +++$+++ u0 +++$+++ m0 +++$+++ BIANCA +++$+++ Like my fear of wearing pastels?\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "isPo3sijY5QX",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "9294f3d7-0fd1-4d1a-9eb6-1b4e98613099"
+      },
+      "cell_type": "code",
+      "source": [
+        "print(\"\\n\".join(conversations[0:10]))"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L194', 'L195', 'L196', 'L197']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L198', 'L199']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L200', 'L201', 'L202', 'L203']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L204', 'L205', 'L206']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L207', 'L208']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L271', 'L272', 'L273', 'L274', 'L275']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L276', 'L277']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L280', 'L281']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L363', 'L364']\n",
+            "u0 +++$+++ u2 +++$+++ m0 +++$+++ ['L365', 'L366']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "pKxerh9bZVIY",
+        "colab_type": "code",
         "colab": {}
       },
       "cell_type": "code",
