--- a/Preproc.ipynb
+++ b/Preproc.ipynb
@@ -26,30 +26,59 @@
     },
     {
       "metadata": {
-        "id": "HH6Sk9T9RjrN",
+        "id": "n4oyS5PcJBxu",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 102
         },
-        "outputId": "fb6d059b-18dd-44ad-fc21-913e4cf3f1d4"
+        "outputId": "766e9363-5db4-4dc9-a8c3-82be3da570a6"
       },
       "cell_type": "code",
       "source": [
-        "#!pip install -q xlrd\n",
-        "#!git clone https://github.com/hamil168/Chatbots\n",
-        "!cd Chatbots\n",
-        "!git pull https://github.com/hamil168/Chatbots master\n",
-        "\n"
+        "# For a fresh Colab instance, clone fresh:\n",
+        "!pip install -q xlrd\n",
+        "!git clone https://github.com/hamil168/Chatbots"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'Chatbots'...\n",
+            "remote: Counting objects: 23, done.\u001b[K\n",
+            "remote: Compressing objects: 100% (20/20), done.\u001b[K\n",
+            "remote: Total 23 (delta 8), reused 13 (delta 2), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (23/23), done.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "nGvvfIY0JCyk",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f6699185-80e8-4294-8345-a33a4d74c10d"
+      },
+      "cell_type": "code",
+      "source": [
+        "# Change to Colab directory:\n",
+        "!cd Chatbots/\n",
+        "\n",
+        "# For an existing Colab instance, pull from master\n",
+        "#!git pull https://github.com/hamil168/Chatbots master"
       ],
       "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "From https://github.com/hamil168/Chatbots\r\n",
-            " * branch            master     -> FETCH_HEAD\r\n",
-            "Already up-to-date.\r\n"
+            "/bin/sh: 1: cd: can't cd to Chatbots/\r\n"
           ],
           "name": "stdout"
         }
@@ -61,67 +90,13 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 52
         },
-        "outputId": "f11220ec-31ed-4a72-accc-1af7eb420e3d"
+        "outputId": "250d4b84-1261-4bc7-e4f8-ab772f50723a"
       },
       "cell_type": "code",
       "source": [
-        "ls"
-      ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[0m\u001b[01;34mChatbots\u001b[0m/  \u001b[01;34mdatalab\u001b[0m/\r\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "BvtIyuS7XHeX",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        },
-        "outputId": "f74d27cb-7c98-4c24-dd93-e405bcd6ad50"
-      },
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "import tensorflow as tf\n",
-        "import re\n",
-        "import time"
-      ],
-      "execution_count": 22,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "zy6to5EBXJcd",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ]
-    },
-    {
-      "metadata": {
-        "id": "XIQMsrJkXCaK",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        },
-        "outputId": "7ed8571a-f23f-4ba1-bf04-14cbc0ec8222"
-      },
-      "cell_type": "code",
-      "source": [
+        "# Files as they appear in the repo clone\n",
         "ls"
       ],
       "execution_count": 25,
@@ -138,31 +113,43 @@
     },
     {
       "metadata": {
-        "id": "Er-yessXX8gZ",
+        "id": "BvtIyuS7XHeX",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 17
+          "height": 16
         },
-        "outputId": "a84d5f04-d35c-4afe-cfb8-55d8455748b1"
+        "outputId": "9191f96e-94d9-4798-8fd3-2defae56e891"
       },
       "cell_type": "code",
       "source": [
-        "lines = open('movie_lines.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')\n",
-        "conversations = open('movie_conversations.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')"
+        "# Start script\n",
+        "\n",
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "import re\n",
+        "import time"
       ],
       "execution_count": 26,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "BSPIatWTZGly",
-        "colab_type": "text"
+        "id": "Er-yessXX8gZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 16
+        },
+        "outputId": "610f17c0-0d37-4a36-cda1-0604045ba87d"
       },
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        ""
-      ]
+        "lines = open('movie_lines.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')\n",
+        "conversations = open('movie_conversations.txt', encoding = 'utf-8', errors = 'ignore').read().split('\\n')"
+      ],
+      "execution_count": 27,
+      "outputs": []
     },
     {
       "metadata": {
@@ -170,15 +157,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 207
+          "height": 214
         },
-        "outputId": "4b99639a-07a2-4d55-f1f0-dcab19e4083e"
+        "outputId": "0bf9ba4a-6dd8-4b3a-80bc-58bff54cf546"
       },
       "cell_type": "code",
       "source": [
         "print(\"\\n\".join(lines[0:10]))"
       ],
-      "execution_count": 31,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,15 +191,15 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 187
+          "height": 194
         },
-        "outputId": "9294f3d7-0fd1-4d1a-9eb6-1b4e98613099"
+        "outputId": "8d9bfae9-f1c2-418c-f0bd-fe59a91b5721"
       },
       "cell_type": "code",
       "source": [
         "print(\"\\n\".join(conversations[0:10]))"
       ],
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -235,6 +222,78 @@
     {
       "metadata": {
         "id": "pKxerh9bZVIY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "**TODO**: Create Dictionary to map lines to conversations\n",
+        "  \n",
+        "Goal is a dataset that contains 2 columns, input for NN, output is target for supervised learning\n",
+        "map each line with its ID\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Ec1yCw-9LNSx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 16
+        },
+        "outputId": "0402d951-b750-45c0-e0a3-f6ffa3e785b3"
+      },
+      "cell_type": "code",
+      "source": [
+        "# iterate through each line, split into different elements, get key, get value\n",
+        "id2line = {}\n",
+        "\n",
+        "for line in lines:\n",
+        "  _line = line.split(' +++$+++ ')\n",
+        "  \n",
+        "  if len(_line) == 5:\n",
+        "    id2line[_line[0]] = _line[4]\n",
+        "  "
+      ],
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Wm71nKBxKwKp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6110eca1-67b8-4a31-cc2c-aeec4c6a303b"
+      },
+      "cell_type": "code",
+      "source": [
+        "id2line['L1045']"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'They do not!'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 44
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "FGC759uXMGDv",
         "colab_type": "code",
         "colab": {}
       },
