Corrected output dimensions of sorted answers

--- a/Preproc.ipynb
+++ b/Preproc.ipynb
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1320,13 +1320,10 @@
     "    if len(i[1]) == length:\n",
     "        sorted_clean_questions.append(questions_into_int[i[0]])\n",
     "      \n",
-    "        # keeps answer well aligned:\n",
-    "        # note that as written, the length of the answer is not limited to 25\n",
-    "        # need to adjust.\n",
-    "        current_answer = answers_into_int[i[0]]\n",
-    "        answer_len = min(MAX_SENTENCE_LENGTH, len(current_answer))  # snips at max length parameter, else goes to 500+\n",
-    "        # interesting to consider error inherent in snippping mid-sentence\n",
-    "        sorted_clean_answers.append(current_answer[0:answer_len]) #<--[0:length] should correct this.\n",
+    "        # keeps answer well aligned and truncated:\n",
+    "        curr_answer = answers_into_int[i[0]]\n",
+    "        trunc_answer = curr_answer[0:min(len(curr_answer), MAX_SENTENCE_LENGTH)]\n",
+    "        sorted_clean_answers.append(trunc_answer)\n",
     "        \n",
     "        \n",
     "      \n",
@@ -1335,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1344,7 +1341,7 @@
        "25"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1352,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "203602\n",
+      "203602\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(sorted_clean_questions))\n",
+    "\n",
+    "print(len(sorted_clean_answers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1396,7 +1413,7 @@
        " 8626]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
